- Updated documentation on the plugins page - Added a page listing which plugins are builtin - Removed the sqlite3.lsp file, it comes with the newLISP distribution

--- a/example-site/views/about.html
+++ b/example-site/views/about.html
@@ -25,7 +25,7 @@
 		<h3 class="code">Marc Hildmann</h3>
 		<p><img class="profile-left" src="<%=(web-root "includes/images/profile_marchildmann.jpg")%>" class="border" alt="Marc Hildmann" title="Marc Hildmann" />Marc Hildmann is a web developer since 1998, started writing apps in pure PHP, tried a little bit Ruby on Rails, experimented with some PHP Frameworks like Codeigniter and finally discovered newLISP. He's interested in retro-computing, especially the first XEROX machines and the good old SGI Indy.</p>
 		<h3 class="code">Greg Slepak</h3>
-		<p><img class="profile-right" src="<%=(web-root "includes/images/profile_gregslepak.png")%>" class="border" alt="Greg Slepak" title="Greg Slepak" />Greg Slepak's primary area of expertise is in software development. He's written software in a variety of languages, on a variety of platforms, for a variety of purposes. He is the author of the folder encryption tool Espionage, and is "Master Chef" at Tao Effect LLC. When he's not coding he's busy learning about how everything works.</p>
+		<p><img class="profile-right" src="<%=(web-root "includes/images/profile_gregslepak.png")%>" class="border" alt="Greg Slepak" title="Greg Slepak" />Greg Slepak's primary area of expertise is in software development. He's written software in a variety of languages, on a variety of platforms, for a variety of purposes. He is the author of the folder encryption tool Espionage, and is "Master Chef" at Tao Effect LLC.</p>
 		
 		
 		<h2>How Do we "sell" Dragonfly?! Well ...</h2>
