--- a/example-site/views/dragonfly_views.html
+++ b/example-site/views/dragonfly_views.html
@@ -37,8 +37,7 @@
     (begin (set 'viewname _)
            (string VIEWS_PATH "/" _))
     (begin (set 'viewname _)
-           (string VIEWS_PATH "/" _ VIEW_EXTENSION))
-)</pre>
+           (string VIEWS_PATH "/" _ VIEW_EXTENSION))</pre>
 		<p>
 			The last transformation listed there is responsible for transforming a request to this URL:
 		</p>
