--- a/example-site/views/partials/navigation.html
+++ b/example-site/views/partials/navigation.html
@@ -18,6 +18,7 @@
 				
 				<dt>Plugins</dt>
 				<dd><% (link_to  "Using and creating plugins" "dragonfly_plugins") %></dd>
+				<dd><% (link_to  "List of included plugins" "dragonfly_builtin_plugins") %></dd>
 			</dl>
 			<dl class="R">
 				<dt>Core API</dt>
