--- a/example-site/views/dragonfly_plugins.html
+++ b/example-site/views/dragonfly_plugins.html
@@ -33,13 +33,18 @@
 		<p>
 			Inactive plugins are simply those that should be loaded on a "need to use" basis. Most plugins will probably fall into this category. Use <span class="code">DF:activate-plugin</span> to load them. All plugins are loaded exactly once, no matter how many times <span class="code">activate-plugin</span> is called on them.
 		</p>
-		<h2>Getting Plugins</h2>
+		
+		<h2>Modules</h2>
 		<p>
-			Modules make for excellent plugins! There's a <a href="http://www.newlisp.org/modules/">list</a> of available modules on newLISP's site. Watch this space for Dragonfly specific plugins as they become available.
+			In addition to <%(link_to "Dragonfly's plugins" "dragonfly_builtin_plugins")%>, you can use the <a href="http://www.newlisp.org/code/modules/">modules</a> that come with newLISP. You can load them using the <span class="code">module</span> function like this:
 		</p>
-		<p>
-			If you have a plugin you'd like to contribute, let us know on the <a href="http://newlispfanclub.alh.net/forum/">newLISP forums</a>!
+		<pre class="code">(module "sqlite3.lsp")</pre>
+		<p class="info"><b>INFORMATION</b><br/>
+			Dragonfly overloads the <span class="code">load</span> function (which <span class="code">module</span> uses) to ensure that modules, like plugins, are loaded only once.
 		</p>
+		<p class="continue"><% (link_to "CONTINUE &raquo;" "dragonfly_builtin_plugins") %></p>
+		<div class="clear"></div>
+		
 		<div class="line-dotted"></div>
 
 		<% (benchmark-result) %>
