--- a/example-site/views/code.html
+++ b/example-site/views/code.html
@@ -39,7 +39,7 @@
 		<h3>The last five changes from the repository:</h3>
 		<div id="mercurial_changes">
 			<p>
-			<% (read-atom-feed "http://code.google.com/feeds/p/dragonfly-newlisp/hgchanges/basic", 5) %>	
+			<% (read-atom-feed "http://code.google.com/feeds/p/dragonfly-newlisp/hgchanges/basic" 5) %>	
 			</p>
 		</div>
 
