--- a/example-site/views/dragonfly_feeds.html
+++ b/example-site/views/dragonfly_feeds.html
@@ -34,7 +34,7 @@
 		<pre class="code">&lt;% (read-atom-feed "http://website.com/atomfeed.xml" nil true) %&gt;</pre>
 		
 		<p>
-			The <span class="code">read-rss-feed</span> function works in the same manner. These functions are used to display the feeds below:
+			The <span class="code">read-rss-feed</span> function works in the same manner. These functions are used to display the feed below:
 		</p>
 
 		<h2>NYTimes.com (RSS)</h2>
