--- a/example-site/views/dragonfly_routes.html
+++ b/example-site/views/dragonfly_routes.html
@@ -360,7 +360,7 @@
 		<p class="quote"><i>Think about it. If you only want to view a specific comment, you shouldn’t have to specify the account, person, and note for the comment in the URL.</i>
 			<span>-- <a href="http://weblog.jamisbuck.org/2007/2/5/nesting-resources">Jamis Buck</a></span></p>
 		<p>
-			Because of these considerations, as well as the complexities of supporting nested resources in a generic fashion, Dragonfly does not encourage this sort of design pattern by supporting it out-of-the-box. However, if you need such behavior, <%(link_to "create it" "dragonfly_create_routes")%>, it's easy to do. :-)
+			Because of these considerations, as well as the complexities of supporting nested resources in a generic fashion, Dragonfly does not encourage this sort of design pattern by supporting it out-of-the-box. However, if you need such behavior, you've got everything you need to <%(link_to "create it" "dragonfly_create_routes")%>. :-)
 		</p>
 		<p class="continue"><% (link_to "CONTINUE &raquo;" "dragonfly_create_routes") %></p>
 		<div class="clear"></div>
