--- a/example-site/views/dragonfly_routes.html
+++ b/example-site/views/dragonfly_routes.html
@@ -280,7 +280,7 @@
 		<br/>
 		<table>
 			<tr class="header">
-				<td>URL</td>
+				<td width="110">URL</td>
 				<td>controller</td>
 				<td>used for</td>
 			</tr>
