updated resource example

--- a/example-site/views/dragonfly_routes.html
+++ b/example-site/views/dragonfly_routes.html
@@ -231,6 +231,7 @@
 				req_url += '/' + $('#wings_id').val();
 				req_url += $('#response_format').val();
 				$('#wings_request').html(req_url);
+				$('#wings_resp').html('loading...');
 				$.ajax({
 					url: req_url,
 					success: function (data, status) {
