fixed broken dragonfly_ajax-twitter and improved ajax-updater

--- a/example-site/views/dragonfly_ajax-twitter.html
+++ b/example-site/views/dragonfly_ajax-twitter.html
@@ -1,1 +1,4 @@
-<% (twitter-search "michael jackson" "1") %>
+<%
+(DF:activate-plugin "dragonfly_twitter")
+(twitter-search "michael jackson" "1")
+%>
