--- a/example-site/views/dragonfly_plugins.html
+++ b/example-site/views/dragonfly_plugins.html
@@ -42,8 +42,8 @@
 		<p class="info"><b>INFORMATION</b><br/>
 			Dragonfly overloads the <span class="code">load</span> function (which <span class="code">module</span> uses) to ensure that modules, like plugins, are loaded only once.
 		</p>
-		<p class="continue"><% (link_to "CONTINUE &raquo;" "dragonfly_builtin_plugins") %></p>
-		<div class="clear"></div>
+		
+		<% (display-partial "continue") %>
 		
 		<div class="line-dotted"></div>
 
