--- a/example-site/views/dragonfly_tables.html
+++ b/example-site/views/dragonfly_tables.html
@@ -35,7 +35,9 @@
 		<% (table_close) %>
 		<br/><br/>
 
-		<% (form-generate-from-columns "blog.nldb" entries) %>
+		<%  ; this doesn't work, therefore it's commented out until it's fixed
+			;(form-generate-from-columns "blog.nldb" entries)
+		%>
 		
 		<div class="line-dotted"></div>
 
