--- a/example-site/views/404.html
+++ b/example-site/views/404.html
@@ -29,7 +29,7 @@
 <body>
   <div class="dialog">
     <h1>We're sorry, but something went wrong. (404)</h1>
-    <p>We couldn't find the page or file You asked for. Start over right <a href="./">here</a>.</p>
+    <p>We couldn't find the page or file you asked for. Start over right <a href="/">here</a>.</p>
   </div>
 </body>
 </html>
