--- a/example-site/views/500.html
+++ b/example-site/views/500.html
@@ -29,7 +29,8 @@
 <body>
   <div class="dialog">
     <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly. Start over right <a href="./">here</a>.</p>
+    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
+	<p>Start over <a href="./">here</a> or <a href="javascript:history.back();">go back</a>.</p>
 	<div class="backtrace">
 		<%=(join (parse (last (last-error)) "\n") "<br/>")%>
 	</div>
