--- a/example-site/views/404.html
+++ b/example-site/views/404.html
@@ -30,7 +30,7 @@
   <div class="dialog">
     <h1>We're sorry, but something went wrong. (404)</h1>
     <p>We couldn't find the page or file you asked for.</p>
-	<p>Start over <a href="./">here</a> or <a href="javascript:history.back();">go back</a>.</p>
+	<p>Start over <a href="<%=(web-root)%>">here</a> or <a href="javascript:history.back();">go back</a>.</p>
   </div>
 </body>
 </html>
