--- a/example-site/views/dragonfly_errors.html
+++ b/example-site/views/dragonfly_errors.html
@@ -63,10 +63,7 @@
 		<p>
 			If it exists, it will be displayed instead of <span class="code">ERROR_TEMPLATE</span>.
 		</p>
-		<p>
-			Want to see the 500 template this site uses?
-		</p>
-		<p><a href="<%=(web-root "wings/3" (find "newLISP" SERVER_SOFTWARE))%>">I thought you'd never ask.</a></p>
+		<p>To see this site's 500 page, click <a href="<%=(web-root "wings/3" (find "newLISP" SERVER_SOFTWARE))%>">here</a>.</p>
 		
 		<h3>Checking the <span class="code" style="font-size:inherit">dragonfly.log</span></h3>
 		
