moved api-docs to example-site/dragonfly-api
--HG--
rename : api-docs/dragonfly.lsp.html => example-site/dragonfly-api/dragonfly.lsp.html
rename : api-docs/index.html => example-site/dragonfly-api/index.html
rename : api-docs/log.lsp.html => example-site/dragonfly-api/log.lsp.html
rename : api-docs/request.lsp.html => example-site/dragonfly-api/request.lsp.html
rename : api-docs/response.lsp.html => example-site/dragonfly-api/response.lsp.html
rename : api-docs/utils.lsp.html => example-site/dragonfly-api/utils.lsp.html

--- a/example-site/views/dragonfly_ajax-api.html
+++ b/example-site/views/dragonfly_ajax-api.html
@@ -1,8 +1,10 @@
 <% 
+(activate-plugin "dragonfly_api")
+
 (let (path ($POST "path"))
 	; security check! make sure they ain't asking
 	; for something they shouldn't be asking for!
-	(if (and (find "../api-docs/" path) (ends-with path ".html"))
+	(if (and (find dragonfly-api-directory path) (ends-with path ".html"))
 		(include path)
 		(die "bad path: " path)
 	)
