--- a/example-site/views/dragonfly_welcome.html
+++ b/example-site/views/dragonfly_welcome.html
@@ -39,11 +39,11 @@
 		<h2>newLISP Server</h2>
 		<p>You can easily run this website locally using newLISP's built-in web server:</p>
 		<pre class="code">$ cd path/to/dragonfly-newlisp/example-site
-$ newlisp -http -w . -d 8080</pre>
+$ ./newlispServer</pre>
 		<p>Then just point your browser to:</p>
 		<p><span class="code">http://localhost:8080</span></p>
 		<p>When using newLISP as the server links must have a question mark prepended to them. For example:</p>
-		<p><span class="code">http://localhost:8080/?welcome</p>
+		<p><span class="code">http://localhost:8080/welcome</p>
 		<p class="info"><b>INFORMATION</b><br/>For information on how to configure dragonfly, see <a href="#config">Step 2: Configuring Dragonfly</a> below.</p>
 		
 		<h2>Apache Server</h2>
