--- a/example-site/views/partials/continue.html
+++ b/example-site/views/partials/continue.html
@@ -3,7 +3,7 @@
 
 <script type="text/javascript" charset="utf-8">
 	$('#continue_link').attr('href', function () {
-		var viewpath = "<%=(web-root viewname (find {newLISP} SERVER_SOFTWARE))%>";
+		var viewpath = "<%=(web-root viewname)%>";
 		var ourlink = $("#user_guide_menu dd > a[href='"+viewpath+"']:first");
 		var nextlink = ourlink.parent().nextAll('dd:first').children('a:first').not(ourlink);
 		// if there's a next link in the current column return its href
