removed mention of ? prepending from dragonfly_welcome

--- a/example-site/views/dragonfly_welcome.html
+++ b/example-site/views/dragonfly_welcome.html
@@ -40,11 +40,9 @@
 		<p>You can easily run this website locally using newLISP's built-in web server:</p>
 		<pre class="code">$ cd path/to/dragonfly-newlisp/example-site
 $ ./newlispServer</pre>
-		<p>Then just point your browser to:</p>
-		<p><span class="code">http://localhost:8080</span></p>
-		<p>When using newLISP as the server links must have a question mark prepended to them. For example:</p>
-		<p><span class="code">http://localhost:8080/welcome</p>
-		<p class="info"><b>INFORMATION</b><br/>For information on how to configure dragonfly, see <a href="#config">Step 2: Configuring Dragonfly</a> below.</p>
+		<p>Then just visit:
+			<a href="http://localhost:8080">http://localhost:8080</a></p>
+		<p class="info"><b>INFORMATION</b><br/>For information on how to configure various parameters of Dragonfly, see <a href="#config">Step 2: Configuring Dragonfly</a> below.</p>
 		
 		<h2>Apache Server</h2>
 		<h3 class="code">Step 1: Copying Files</h3>
