- updated jquery and added some jquery effects stuff<br/> - added multi-param stuff for $GET/$POST<br/> - added a page to the guide on said multi-param stuff<br/> - removed the blog.html file<br/> - added newlispServerWIn.bat<br/> - updated README and TROUBLESHOOTING on how to use said bat file

--- a/example-site/includes/css/screen.css
+++ b/example-site/includes/css/screen.css
@@ -123,9 +123,8 @@ body img {
 	
 	#content div.resultbox {
 		padding:10px;
-		border:1px solid #DDD;
+		border:1px solid #CCC;
 		margin-top: 10px;
-		background-color: #EEE;
 	}
 	
 	#content div#demo-error {
