--- a/example-site/views/partials/navigation.html
+++ b/example-site/views/partials/navigation.html
@@ -17,6 +17,9 @@
 				<dd><% (link_to  "Creating templates and views" "dragonfly_templates") %></dd>
 				<dd><% (link_to  "Handling errors using templates" "dragonfly_errors") %></dd>
 				
+				<dt>Parameters and forms</dt>
+				<dd><% (link_to "$GET, $POST, $FILES..." "dragonfly_getpost") %></dd>
+				
 				<dt>Plugins</dt>
 				<dd><% (link_to  "Using and creating plugins" "dragonfly_plugins") %></dd>
 				<dd><% (link_to  "List of included plugins" "dragonfly_builtin_plugins") %></dd>
