--- a/example-site/views/partials/header.html
+++ b/example-site/views/partials/header.html
@@ -5,5 +5,5 @@
 (css "screen" (web-root "includes/css/screen.css"))
 (script (web-root "includes/js/jquery-1.3.2.min.js"))
 (script (web-root "includes/js/dragonfly.js"))
-(rss "Dragonfly web framework RSS Feed" (web-root "?dragonfly_rssfeed/xml"))
+(rss "Dragonfly web framework RSS Feed" (web-root "dragonfly_rssfeed"))
 %>
