--- a/example-site/views/dragonfly_builtin_plugins.html
+++ b/example-site/views/dragonfly_builtin_plugins.html
@@ -37,6 +37,20 @@
 				</ul>
 			</li>
 		</ul>
+		<h2>Dragonfly Database</h2>
+		<p>
+			Dragonfly includes its own generic database access interface called <span class="code">DF.DB</span>.
+			It serves as an alternative to the individual database wrappers included as part of newLISP's standard modules.
+		</p>
+		<p>
+			DF.DB aims to provide a high-quality, efficient, and standard interface to various databases.
+			Currently only SQLite3 is supported but more databases are on their way. You are welcome to use
+			newLISP's various database modules as well.
+		</p>
+		<p>
+			You can find it in the <span class="code">plugins-inactive/db</span> folder. The API is
+			<a href="http://www.taoeffect.com/newlisp/index.html">online here</a>.
+		</p>
 		<h2>Artful Code Modules</h2>
 		<p>
 			Dragonfly includes several of Jeff Ober's <a href="http://static.artfulcode.net/newlisp/">Artful Code modules</a>, including functions for:
