updated example in dragonfly_create_routes

--- a/example-site/views/dragonfly_create_routes.html
+++ b/example-site/views/dragonfly_create_routes.html
@@ -60,7 +60,9 @@
 )
 
 ; add the route to the end of the list of routes
-(push (Route.StaticSimple) DF:dragonfly-routes -1)</pre>
+(push (Route.StaticSimple) DF:dragonfly-routes -1)
+
+(context MAIN)</pre>
 		<p>
 			This static route takes requests very literally. For example, take the following request URL:
 		</p>
