new functions in util.lsp and updated Sqlite3 for DF.DB

--- a/example-site/includes/css/screen.css
+++ b/example-site/includes/css/screen.css
@@ -217,6 +217,10 @@ body img {
 		line-height:15px;
 		font-size: 11px;
 	}
+	
+	#api-browser blockquote em {
+		font-style: italic;
+	}
 
 	#api-browser blockquote h3 {
 		font-size:18px;
